Add tdlastohtml as an entry point. More LAS documentation and example_code. All tests pass.

--- a/example_data/LAS/HTML/index.html
+++ b/example_data/LAS/HTML/index.html
@@ -3,7 +3,7 @@
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="UTF-8"/>
-    <title>Results of &quot;index.html&quot;</title>
+    <title>IndexHTML of: &quot;index.html&quot;</title>
     <style>/* CSS for index pages */
 body {
 font-size:      12px;
@@ -77,59 +77,45 @@ th.filetable, td.filetable {
       </tr>
       <tr class="filetable">
         <td class="filetable" colspan="1" rowspan="1">
-          <a class="filetable" href="Ver_12_Canadian.las.html">Ver_12_Canadian.las.html</a>
-        </td>
-        <td class="filetable">LAS1.2</td>
-        <td class="filetable">V, W, C, P, O, A</td>
-        <td class="filetable">DEPT, ILD, ILM, SFLU, SP, DPHI, NPHI, GR, CALI</td>
-        <td class="filetable">861</td>
-        <td class="filetable">1509.0 (M)</td>
-        <td class="filetable">1640.064 (M)</td>
-        <td class="filetable">0.1524 (M)</td>
-        <td class="filetable">104,719</td>
-        <td class="filetable">0.039 (s)</td>
-      </tr>
-      <tr class="filetable">
-        <td class="filetable" colspan="1" rowspan="1">
-          <a class="filetable" href="Ver_12_USA.las.html">Ver_12_USA.las.html</a>
-        </td>
-        <td class="filetable">LAS1.2</td>
-        <td class="filetable">V, W, C, P, O, A</td>
-        <td class="filetable">DEPT, ILD, ILM, SFLU, SP, DPHI, NPHI, GR, CALI</td>
-        <td class="filetable">861</td>
-        <td class="filetable">4950.0 (F)</td>
-        <td class="filetable">5380.0 (F)</td>
-        <td class="filetable">0.5 (F)</td>
-        <td class="filetable">104,783</td>
-        <td class="filetable">0.038 (s)</td>
-      </tr>
-      <tr class="filetable">
-        <td class="filetable" colspan="1" rowspan="1">
-          <a class="filetable" href="Ver_2_Canadian.las.html">Ver_2_Canadian.las.html</a>
+          <a class="filetable" href="1000079714.las.html">1000079714.las.html</a>
         </td>
         <td class="filetable">LAS2.0</td>
-        <td class="filetable">V, W, C, P, O, A</td>
-        <td class="filetable">DEPT, ILD, ILM, SFLU, SP, DPHI, NPHI, GR, CALI</td>
-        <td class="filetable">861</td>
-        <td class="filetable">1509.0 (M)</td>
-        <td class="filetable">1640.064 (M)</td>
-        <td class="filetable">0.1524 (M)</td>
-        <td class="filetable">104,422</td>
-        <td class="filetable">0.047 (s)</td>
+        <td class="filetable">V, W, C, P, D, A</td>
+        <td class="filetable">DEPT, GR</td>
+        <td class="filetable">3,732</td>
+        <td class="filetable">1.0 (F)</td>
+        <td class="filetable">1866.5 (F)</td>
+        <td class="filetable">0.5000 (F)</td>
+        <td class="filetable">80,697</td>
+        <td class="filetable">0.083 (s)</td>
       </tr>
       <tr class="filetable">
         <td class="filetable" colspan="1" rowspan="1">
-          <a class="filetable" href="Ver_2_USA.las.html">Ver_2_USA.las.html</a>
+          <a class="filetable" href="206_05a-_3_DWL_DWL_WIRE_258276498_0_2000T.las.html">206_05a-_3_DWL_DWL_WIRE_258276498_0_2000T.las.html</a>
         </td>
         <td class="filetable">LAS2.0</td>
-        <td class="filetable">V, W, C, P, O, A</td>
-        <td class="filetable">DEPT, ILD, ILM, SFLU, SP, DPHI, NPHI, GR, CALI</td>
-        <td class="filetable">861</td>
-        <td class="filetable">4950.0 (F)</td>
-        <td class="filetable">5380.0 (F)</td>
-        <td class="filetable">0.5 (F)</td>
-        <td class="filetable">104,623</td>
-        <td class="filetable">0.039 (s)</td>
+        <td class="filetable">V, W, P, C, A</td>
+        <td class="filetable">TIME, TDEP, TENS_SL, DEPT_SL</td>
+        <td class="filetable">921</td>
+        <td class="filetable">16677259.0 (ms)</td>
+        <td class="filetable">17597260.0 (ms)</td>
+        <td class="filetable">1000.0011 (ms)</td>
+        <td class="filetable">87,448</td>
+        <td class="filetable">0.065 (s)</td>
+      </tr>
+      <tr class="filetable">
+        <td class="filetable" colspan="1" rowspan="1">
+          <a class="filetable" href="BASIC_FILE_0_50.las.html">BASIC_FILE_0_50.las.html</a>
+        </td>
+        <td class="filetable">LAS2.0</td>
+        <td class="filetable">V, W, P, C, A</td>
+        <td class="filetable">DEPT, TENS, ETIM, DHTN, GR</td>
+        <td class="filetable">649</td>
+        <td class="filetable">2889.4 (m)</td>
+        <td class="filetable">2954.2 (m)</td>
+        <td class="filetable">0.1000 (m)</td>
+        <td class="filetable">62,494</td>
+        <td class="filetable">0.044 (s)</td>
       </tr>
     </table>
   </body>
