More entry point tests for plotting tools to increase coverage.
Cleaned up example_files/LIS/Plot directories.

--- a/example_data/LIS/HTML/DILLSON-1_WELL_LOGS_FILE-037.LIS.html
+++ b/example_data/LIS/HTML/DILLSON-1_WELL_LOGS_FILE-037.LIS.html
@@ -46,7 +46,7 @@
         <td class="monospace">30.4A   </td>
       </tr>
       <tr>
-        <td class="monospace">Date</td>
+        <td class="monospace">Date (yy/mm/dd)</td>
         <td class="monospace">88/11/22</td>
       </tr>
       <tr>
@@ -8807,7 +8807,7 @@
         <td class="monospace">30.4A   </td>
       </tr>
       <tr>
-        <td class="monospace">Date</td>
+        <td class="monospace">Date (yy/mm/dd)</td>
         <td class="monospace">88/11/22</td>
       </tr>
       <tr>
@@ -8827,6 +8827,6 @@
       <a href="#top">To top</a>
     </p>
     <hr/>
-    <p class="copyright">Produced by LisToHtml version: 0.1.0, date: 2011-06-14, rights: &quot;Copyright (c) Paul Ross&quot; CPU time: 0.772 (s)</p>
+    <p class="copyright">Produced by LisToHtml version: 0.2.0, date: 2020-08-23, rights: &quot;Copyright (c) Paul Ross&quot; CPU time: 0.700 (s)</p>
   </body>
 </html>
