--- a/example_data/LIS/HTML/DILLSON-1_WELL_LOGS_FILE-049.LIS.html
+++ b/example_data/LIS/HTML/DILLSON-1_WELL_LOGS_FILE-049.LIS.html
@@ -43,7 +43,7 @@
         <td class="monospace">002E05  </td>
       </tr>
       <tr>
-        <td class="monospace">Date</td>
+        <td class="monospace">Date (yy/mm/dd)</td>
         <td class="monospace">89/05/15</td>
       </tr>
       <tr>
@@ -1348,7 +1348,7 @@
         <td class="monospace">002E05  </td>
       </tr>
       <tr>
-        <td class="monospace">Date</td>
+        <td class="monospace">Date (yy/mm/dd)</td>
         <td class="monospace">89/05/15</td>
       </tr>
       <tr>
@@ -1368,6 +1368,6 @@
       <a href="#top">To top</a>
     </p>
     <hr/>
-    <p class="copyright">Produced by LisToHtml version: 0.1.0, date: 2011-06-14, rights: &quot;Copyright (c) Paul Ross&quot; CPU time: 0.405 (s)</p>
+    <p class="copyright">Produced by LisToHtml version: 0.2.0, date: 2020-08-23, rights: &quot;Copyright (c) Paul Ross&quot; CPU time: 0.611 (s)</p>
   </body>
 </html>
