--- a/example_data/LIS/Plot/index.html
+++ b/example_data/LIS/Plot/index.html
@@ -5,7 +5,7 @@
     <link href="index.css" rel="stylesheet" type="text/css"/>
     <title>LIS plots in SVG</title>
   </head>
-  <h1>PlotLogPasses: ../../../example_data/LIS/data/DILLSON-1_WELL_LOGS_FILE-049.LIS</h1>
+  <h1>PlotLogPasses: example_data/LIS/data/</h1>
   <table border="1">
     <tr>
       <th>Input</th>
@@ -14,9 +14,160 @@
       <th>Scale</th>
       <th>From</th>
       <th>To</th>
+      <th>Interval</th>
       <th>Curves</th>
       <th>Points</th>
       <th>Plot</th>
+    </tr>
+    <tr>
+      <td rowspan="7">DILLSON-1_WELL_LOGS_FILE-013.LIS</td>
+      <td rowspan="7">1</td>
+      <td>Azimuthal_Resistivity_3Track.xml</td>
+      <td align="right">100</td>
+      <td align="right">2459.0 (FEET)</td>
+      <td align="right">2253.5 (FEET)</td>
+      <td align="right">-205.5 (FEET)</td>
+      <td align="left">BitSize, Cali, GammaRay, SP, Tension</td>
+      <td align="right">2055</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Azimuthal_Resistivity_3Track.xml.svg">DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Azimuthal_Resistivity_3Track.xml.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Micro_Resistivity_3Track.xml</td>
+      <td align="right">100</td>
+      <td align="right">2459.0 (FEET)</td>
+      <td align="right">2253.5 (FEET)</td>
+      <td align="right">-205.5 (FEET)</td>
+      <td align="left">BitSize, Caliper, GammaRay, MicroSFL, SP, TENSION</td>
+      <td align="right">3288</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Micro_Resistivity_3Track.xml.svg">DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Micro_Resistivity_3Track.xml.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Porosity_GR_3Track</td>
+      <td align="right">100</td>
+      <td align="right">2459.0 (FEET)</td>
+      <td align="right">2253.5 (FEET)</td>
+      <td align="right">-205.5 (FEET)</td>
+      <td align="left">BitSize, Cali, GammaRay, SP, Tension</td>
+      <td align="right">2055</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Porosity_GR_3Track.svg">DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Porosity_GR_3Track.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Resistivity_3Track_Correlation.xml</td>
+      <td align="right">100</td>
+      <td align="right">2459.0 (FEET)</td>
+      <td align="right">2253.5 (FEET)</td>
+      <td align="right">-205.5 (FEET)</td>
+      <td align="left">BS_7, CALI_8, CILD, GR_9, SP_10, TENS_6</td>
+      <td align="right">2466</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Resistivity_3Track_Correlation.xml.svg">DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Resistivity_3Track_Correlation.xml.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Resistivity_3Track_Logrithmic.xml</td>
+      <td align="right">100</td>
+      <td align="right">2459.0 (FEET)</td>
+      <td align="right">2253.5 (FEET)</td>
+      <td align="right">-205.5 (FEET)</td>
+      <td align="left">BS_7, CALI_8, GR_9, ILD, ILM, MSFL, SP_10, TENS_6</td>
+      <td align="right">4110</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Resistivity_3Track_Logrithmic.xml.svg">DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Resistivity_3Track_Logrithmic.xml.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Sonic_3Track.xml</td>
+      <td align="right">100</td>
+      <td align="right">2459.0 (FEET)</td>
+      <td align="right">2253.5 (FEET)</td>
+      <td align="right">-205.5 (FEET)</td>
+      <td align="left">BitSize, Caliper, DT, DTL_DDBHC, GammaRay, SP, TENSION</td>
+      <td align="right">2877</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Sonic_3Track.xml.svg">DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Sonic_3Track.xml.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Triple_Combo</td>
+      <td align="right">100</td>
+      <td align="right">2459.0 (FEET)</td>
+      <td align="right">2253.5 (FEET)</td>
+      <td align="right">-205.5 (FEET)</td>
+      <td align="left">BitSize, Cali, GammaRay, ILD, ILM, MSFL, SP, Tension</td>
+      <td align="right">4110</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Triple_Combo.svg">DILLSON-1_WELL_LOGS_FILE-013.LIS_0001_Triple_Combo.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td rowspan="4">DILLSON-1_WELL_LOGS_FILE-037.LIS</td>
+      <td rowspan="4">1</td>
+      <td>Micro_Resistivity_3Track.xml</td>
+      <td align="right">100</td>
+      <td align="right">5289.5 (FEET)</td>
+      <td align="right">5082.0 (FEET)</td>
+      <td align="right">-207.5 (FEET)</td>
+      <td align="left">BitSize, Caliper, MicroInverse, MicroNormal, TENSION</td>
+      <td align="right">3735</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-037.LIS_0001_Micro_Resistivity_3Track.xml.svg">DILLSON-1_WELL_LOGS_FILE-037.LIS_0001_Micro_Resistivity_3Track.xml.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Natural_GR_Spectrometry_3Track.xml</td>
+      <td align="right">100</td>
+      <td align="right">5289.5 (FEET)</td>
+      <td align="right">5082.0 (FEET)</td>
+      <td align="right">-207.5 (FEET)</td>
+      <td align="left">CGR_2, POTA, SGR_1, TENS_16, THOR, URAN</td>
+      <td align="right">2490</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-037.LIS_0001_Natural_GR_Spectrometry_3Track.xml.svg">DILLSON-1_WELL_LOGS_FILE-037.LIS_0001_Natural_GR_Spectrometry_3Track.xml.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Porosity_GR_3Track</td>
+      <td align="right">100</td>
+      <td align="right">5289.5 (FEET)</td>
+      <td align="right">5082.0 (FEET)</td>
+      <td align="right">-207.5 (FEET)</td>
+      <td align="left">BitSize, Cali, DRHO, DensityPorosity, EpithermalPorosity, OLDESTNeutronPorosity, RHOB, Tension</td>
+      <td align="right">3320</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-037.LIS_0001_Porosity_GR_3Track.svg">DILLSON-1_WELL_LOGS_FILE-037.LIS_0001_Porosity_GR_3Track.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>Triple_Combo</td>
+      <td align="right">100</td>
+      <td align="right">5289.5 (FEET)</td>
+      <td align="right">5082.0 (FEET)</td>
+      <td align="right">-207.5 (FEET)</td>
+      <td align="left">BitSize, Cali, DensityPorosity, EpithermalPorosity, OLDESTNeutronPorosity, Tension</td>
+      <td align="right">2490</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-037.LIS_0001_Triple_Combo.svg">DILLSON-1_WELL_LOGS_FILE-037.LIS_0001_Triple_Combo.svg</a>
+      </td>
+    </tr>
+    <tr>
+      <td>DILLSON-1_WELL_LOGS_FILE-049.LIS</td>
+      <td>1</td>
+      <td>HDT</td>
+      <td align="right">100</td>
+      <td align="right">5280.8 (FEET)</td>
+      <td align="right">5079.7 (FEET)</td>
+      <td align="right">-201.1 (FEET)</td>
+      <td align="left">C1 Caliper, C2 Caliper, Deviation, FC0, FC1, FC2, FC3, FC4, Hole Azimuth, Pad1 Azimuth, Relative Bearing</td>
+      <td align="right">64844</td>
+      <td align="left">
+        <a href="../Plot/DILLSON-1_WELL_LOGS_FILE-049.LIS_0001_HDT.svg">DILLSON-1_WELL_LOGS_FILE-049.LIS_0001_HDT.svg</a>
+      </td>
     </tr>
   </table>
 </html>
