Minor work tweaks.

--- a/example_data/RP66V1/HTML/206_05a-_3_DWL_DWL_WIRE_258276498.DLIS.html
+++ b/example_data/RP66V1/HTML/206_05a-_3_DWL_DWL_WIRE_258276498.DLIS.html
@@ -13591,7 +13591,7 @@ th.monospace, td.monospace {
         <td class="monospace">4</td>
         <td class="monospace">2292</td>
         <td class="monospace">4</td>
-        <td class="monospace">--</td>
+        <td class="monospace">0.000</td>
         <td class="monospace">float32</td>
       </tr>
       <tr>
