--- a/example_data/RP66V1/HTML/index.html
+++ b/example_data/RP66V1/HTML/index.html
@@ -65,7 +65,7 @@ th.filetable, td.filetable {
     <h1>Index of RP66V1 Scan: example_data/RP66V1/HTML</h1>
     <p>Command:</p>
     <p>
-      <pre>/Users/paulross/pyenvs/TotalDepth3.9_develop/bin/tdrp66v1scanhtml example_data/RP66V1/data/ example_data/RP66V1/HTML/</pre>
+      <pre>/Users/engun/venvs/TotalDepth38_rel/bin/tdrp66v1scanhtml -r example_data/RP66V1/data example_data/RP66V1/HTML</pre>
     </p>
     <table class="filetable">
       <tr class="filetable">
